// Created by David Walshe on 19/04/2020

syntax = "proto3";

package calculator;

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService {
  // Unary
  // This RPC will throw an error if the sent number is negative.
  rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse);
}